--- a/app/config/config.ini
+++ b/app/config/config.ini
@@ -10,3 +10,4 @@ controllersDir = app/controllers/
 modelsDir      = app/models/
 viewsDir       = app/views/
 baseUri        = /portal/
+formsDir       = app/forms/
