--- a/app/config/config.ini
+++ b/app/config/config.ini
@@ -11,3 +11,4 @@ modelsDir      = app/models/
 viewsDir       = app/views/
 baseUri        = /portal/
 formsDir       = app/forms/
+hooksDir       = app/hooks/
